# project_2

./: .gitignore  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_slug.py
blog/templatetags/: blog_extras.py
config/: settings.py
static/css/: blog.css
templates/: pagination.html
templates/base/: base.html  css_link.html  footer.html
templates/blog/: detail.html  list.html
templates/post/: share.html
