[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.4",
    "dj-database-url>=2.3.0",
    "django>=5.2.1",
    "django-crispy-forms>=2.4",
    "django-environ>=0.12.0",
    "dotenv",
    "python-decouple>=3.8",
]
